// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Header renders with dropdown correctly 1`] = `
<div>
  <div class="row header-container">
    <div class="col-2 ham-menu" style="text-align: center;"><i icon="fas,bars"></i></div>
    <div class="col-lg-9 col-8 left-side">
      <div class="back-btn"><i icon="fas,chevron-left"></i></div>
      <div class="logo"><a><img src="../assets/so_logo.svg"></a></div>
      <div class="city-names">Delhi</div>
      <div id="arrow"><i icon="fas,chevron-down"></i></div>
    </div>
    <div class="col-lg-3 col-2 right-side"><label class="switch-wrap"><input type="checkbox">
        <div class="switch"></div>
      </label>
      <div class="write-a-post">Write A Post</div>
      <div class="search"><i icon="fas,search"></i></div>
    </div>
  </div>
  <dropdown-stub name="fade"></dropdown-stub>
</div>
`;

exports[`Header renders properly 1`] = `
<div>
  <div class="row header-container">
    <div class="col-2 ham-menu" style="text-align: center;"><i icon="fas,bars"></i></div>
    <div class="col-lg-9 col-8 left-side">
      <div class="back-btn"><i icon="fas,chevron-left"></i></div>
      <div class="logo"><a><img src="../assets/so_logo.svg"></a></div>
      <div class="city-names">Delhi</div>
      <div id="arrow"><i icon="fas,chevron-down"></i></div>
    </div>
    <div class="col-lg-3 col-2 right-side"><label class="switch-wrap"><input type="checkbox">
        <div class="switch"></div>
      </label>
      <div class="write-a-post">Write A Post</div>
      <div class="search"><i icon="fas,search"></i></div>
    </div>
  </div>
  <!---->
</div>
`;
